--- a/app/src/main/res/layout/fragment_home_used.xml
+++ b/app/src/main/res/layout/fragment_home_used.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.HomeUsedFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="home3" />
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:src="@drawable/home_main_2"
+        android:layout_gravity="center_horizontal"
+        />
+
 
 </FrameLayout>
