--- a/app/src/main/res/layout/recycler_category_item.xml
+++ b/app/src/main/res/layout/recycler_category_item.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="categoryData"
-            type="com.good.solscript.data.CategoryData" />
+            type="com.good.solscript.data.ResponseCategorySubData" />
     </data>
     <RelativeLayout
         android:id="@+id/rl_rv_matching_item_container"
@@ -45,7 +45,7 @@
                     android:layout_height="155dp"
                     android:layout_gravity="center_horizontal"
                     android:scaleType="fitXY"
-                    setImage="@{categoryData.img}"/>
+                    setImage="@{categoryData.image}"/>
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -68,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:letterSpacing="-0.01"
                     android:lineSpacingExtra="9sp"
-                    android:text="@{categoryData.appname}"
+                    android:text="@{categoryData.title}"
                     android:textColor="#de000000"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -78,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="7sp"
-                    android:text="@{categoryData.description}"
+                    android:text="@{categoryData.subTitle}"
                     android:textColor="#99000000"
                     android:textSize="13sp" />
 
