--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f5f7fa"
     tools:context=".ui.CardRegisterActivity">
     <RelativeLayout
         android:id="@+id/rl_cardact_top"
@@ -54,6 +55,186 @@
             android:layout_height="0.4dp"
             android:background="#abadc4"/>
     </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="320dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rl_cardact_top">
+
+        <HorizontalScrollView
+            android:id="@+id/scroll"
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="48dp"
+                    android:layout_marginVertical="20dp"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/card_big_img" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="14dp"
+                        android:letterSpacing="-0.02"
+                        android:lineSpacingExtra="20sp"
+                        android:text="CJ ONE [체크]"
+                        android:textColor="#3a4047"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="48dp"
+                    android:layout_marginVertical="20dp"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/aircard_big_img" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="14dp"
+                        android:letterSpacing="-0.02"
+                        android:lineSpacingExtra="20sp"
+                        android:text="CJ Air"
+                        android:textColor="#3a4047"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </LinearLayout>
+        </HorizontalScrollView>
+
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="312dp"
+        android:layout_height="187dp"
+        android:layout_marginTop="44dp"
+        android:orientation="vertical"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="22sp"
+                android:text="카드번호"
+                android:textColor="#3a4047"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="100dp"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="2sp"
+                android:textColor="#14172c"
+                android:textSize="13sp"
+                android:text="1234 - 5678 - 3459 - 2456" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="22sp"
+                android:text="CVC2"
+                android:textColor="#3a4047"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/et_cardinfoact_cvc2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:text="124"
+                android:layout_centerVertical="true"
+                android:textSize="13sp"
+                android:textColor="#14172c"
+                android:letterSpacing="0.02"
+                android:lineSpacingExtra="2sp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="22sp"
+                android:text="유효기간"
+                android:textColor="#3a4047"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/et_cardinfoact_valid"
+                android:textSize="13sp"
+                android:textColor="#14172c"
+                android:letterSpacing="0.02"
+                android:layout_centerVertical="true"
+                android:lineSpacingExtra="2sp"
+                android:text="09/24"
+                android:layout_marginStart="100dp"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
+        </RelativeLayout>
+
+    </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
