--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -257,6 +257,7 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/tttt"
         android:text="구독하기"
         android:gravity="center"
         android:textSize="16sp"
