--- a/app/src/main/res/drawable/dot_selector.xml
+++ b/app/src/main/res/drawable/dot_selector.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="false"
-        android:drawable="@drawable/dot_default"/>
-    <item android:state_selected="true"
-        android:drawable="@drawable/dot_selected"/>
+    <item android:drawable="@drawable/dot_default" android:state_selected="false" />
+    <item android:drawable="@drawable/dot_selected" android:state_selected="true" />
 </selector>
