--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#f5f7fa"
     tools:context=".ui.CardRegisterActivity">
+
     <RelativeLayout
         android:id="@+id/rl_cardact_top"
         android:layout_width="match_parent"
@@ -29,31 +30,30 @@
             android:layout_centerInParent="true"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="20sp"
+            android:text="카드 관리"
             android:textColor="#3a4047"
-            android:textSize="16sp"
-            android:text="카드 관리" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_cardact_addbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="#3a4047"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:gravity="end"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="20sp"
-            android:layout_centerVertical="true"
             android:padding="16dp"
-            android:layout_alignParentRight="true"
-            android:gravity="end"
             android:text="추가"
-            android:textStyle="bold"
-            />
+            android:textColor="#3a4047"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <View
-            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="0.4dp"
-            android:background="#abadc4"/>
+            android:layout_alignParentBottom="true"
+            android:background="#abadc4" />
     </RelativeLayout>
 
 
@@ -67,9 +67,9 @@
 
         <HorizontalScrollView
             android:id="@+id/scroll"
-            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -135,8 +135,8 @@
         android:layout_width="312dp"
         android:layout_height="187dp"
         android:layout_marginTop="44dp"
-        android:orientation="vertical"
         android:background="@color/white"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
@@ -166,9 +166,9 @@
                 android:layout_marginStart="100dp"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="2sp"
+                android:text="1234 - 5678 - 3459 - 2456"
                 android:textColor="#14172c"
-                android:textSize="13sp"
-                android:text="1234 - 5678 - 3459 - 2456" />
+                android:textSize="13sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -193,13 +193,13 @@
                 android:id="@+id/et_cardinfoact_cvc2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="100dp"
-                android:text="124"
                 android:layout_centerVertical="true"
-                android:textSize="13sp"
-                android:textColor="#14172c"
+                android:layout_marginStart="100dp"
                 android:letterSpacing="0.02"
-                android:lineSpacingExtra="2sp"/>
+                android:lineSpacingExtra="2sp"
+                android:text="124"
+                android:textColor="#14172c"
+                android:textSize="13sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -222,19 +222,18 @@
 
             <TextView
                 android:id="@+id/et_cardinfoact_valid"
-                android:textSize="13sp"
-                android:textColor="#14172c"
-                android:letterSpacing="0.02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="100dp"
+                android:letterSpacing="0.02"
                 android:lineSpacingExtra="2sp"
                 android:text="09/24"
-                android:layout_marginStart="100dp"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"/>
+                android:textColor="#14172c"
+                android:textSize="13sp" />
         </RelativeLayout>
 
     </LinearLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
