--- a/app/src/main/res/layout/activity_card_info.xml
+++ b/app/src/main/res/layout/activity_card_info.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.CardRegisterActivity">
+
     <RelativeLayout
         android:id="@+id/rl_cardact_top"
         android:layout_width="match_parent"
@@ -28,32 +29,31 @@
             android:layout_centerInParent="true"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="20sp"
+            android:text="카드 등록"
             android:textColor="#3a4047"
-            android:textSize="16sp"
-            android:text="카드 등록" />
+            android:textSize="16sp" />
 
 
         <TextView
             android:id="@+id/tv_cardinfoact_registerbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="#3a4047"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:gravity="end"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="20sp"
-            android:layout_centerVertical="true"
             android:padding="16dp"
-            android:layout_alignParentRight="true"
-            android:gravity="end"
-            android:textStyle="bold"
             android:text="등록"
-            />
+            android:textColor="#3a4047"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <View
-            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="0.4dp"
-            android:background="#abadc4"/>
+            android:layout_alignParentBottom="true"
+            android:background="#abadc4" />
     </RelativeLayout>
 
     <ImageView
@@ -68,139 +68,148 @@
 
 
     <LinearLayout
-        android:layout_marginTop="44dp"
         android:layout_width="312dp"
         android:layout_height="187dp"
+        android:layout_marginTop="44dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:orientation="horizontal">
+
             <TextView
-                android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="카드번호"
-                android:textSize="14sp"
-                android:textColor="#3a4047"
+                android:layout_centerVertical="true"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="22sp"
-                android:textStyle="bold"/>
+                android:text="카드번호"
+                android:textColor="#3a4047"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
             <EditText
                 android:id="@+id/et_cardinfoact_cardnum"
-                android:paddingVertical="4dp"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="108dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="108dp"
                 android:background="@null"
-                android:textSize="14sp"
-                android:textColor="#a8abae"
+                android:hint="‘-‘를 제외하고 입력"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="22sp"
-                android:hint="‘-‘를 제외하고 입력"/>
+                android:paddingVertical="4dp"
+                android:textColor="#a8abae"
+                android:textSize="14sp" />
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:orientation="horizontal">
+
             <TextView
-                android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CVC2"
-                android:textSize="14sp"
-                android:textColor="#3a4047"
+                android:layout_centerVertical="true"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="22sp"
-                android:textStyle="bold"/>
+                android:text="CVC2"
+                android:textColor="#3a4047"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
             <EditText
                 android:id="@+id/et_cardinfoact_cvc2"
-                android:paddingVertical="4dp"
-                android:maxLength="3"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="108dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="108dp"
                 android:background="@null"
-                android:textSize="14sp"
-                android:textColor="#a8abae"
+                android:hint="카드 뒷면 3자리 입력"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="22sp"
-                android:hint="카드 뒷면 3자리 입력"/>
+                android:maxLength="3"
+                android:paddingVertical="4dp"
+                android:textColor="#a8abae"
+                android:textSize="14sp" />
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:orientation="horizontal">
+
             <TextView
-                android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="유효기간"
-                android:textSize="14sp"
-                android:textColor="#3a4047"
+                android:layout_centerVertical="true"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="22sp"
-                android:textStyle="bold"/>
+                android:text="유효기간"
+                android:textColor="#3a4047"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
             <EditText
                 android:id="@+id/et_cardinfoact_valid"
-                android:paddingVertical="4dp"
-                android:maxLength="2"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="108dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="108dp"
                 android:background="@null"
-                android:textSize="14sp"
-                android:textColor="#a8abae"
+                android:hint="앞 2자리 입력"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="22sp"
-                android:hint="앞 2자리 입력"/>
+                android:maxLength="2"
+                android:paddingVertical="4dp"
+                android:textColor="#a8abae"
+                android:textSize="14sp" />
         </RelativeLayout>
+
         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:orientation="horizontal">
+
             <TextView
-                android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="카드 비밀번호"
-                android:textSize="14sp"
-                android:textColor="#3a4047"
+                android:layout_centerVertical="true"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="22sp"
-                android:textStyle="bold"/>
+                android:text="카드 비밀번호"
+                android:textColor="#3a4047"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
             <EditText
                 android:id="@+id/et_cardinfoact_password"
-                android:paddingVertical="4dp"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="108dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="108dp"
                 android:background="@null"
-                android:textSize="14sp"
-                android:textColor="#a8abae"
+                android:hint="앞 2자리 입력"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="22sp"
-                android:password="true"
                 android:maxLength="2"
-                android:hint="앞 2자리 입력"/>
+                android:paddingVertical="4dp"
+                android:password="true"
+                android:textColor="#a8abae"
+                android:textSize="14sp" />
         </RelativeLayout>
 
     </LinearLayout>
