--- a/app/src/main/res/layout/activity_card_register.xml
+++ b/app/src/main/res/layout/activity_card_register.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.CardRegisterActivity">
+
     <RelativeLayout
         android:id="@+id/rl_registeract_top"
         android:layout_width="match_parent"
@@ -28,14 +29,15 @@
             android:layout_centerInParent="true"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="20sp"
+            android:text="카드 등록"
             android:textColor="#3a4047"
-            android:textSize="16sp"
-            android:text="카드 등록" />
+            android:textSize="16sp" />
+
         <View
-            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="0.4dp"
-            android:background="#abadc4"/>
+            android:layout_alignParentBottom="true"
+            android:background="#abadc4" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -68,9 +70,9 @@
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="19sp"
+                android:text="신한은행으로 등록하기"
                 android:textColor="#3a4047"
-                android:textSize="17sp"
-                android:text="신한은행으로 등록하기" />
+                android:textSize="17sp" />
         </LinearLayout>
 
     </RelativeLayout>
@@ -104,9 +106,9 @@
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="19sp"
+                android:text="신한카드로 등록하기"
                 android:textColor="#3a4047"
-                android:textSize="17sp"
-                android:text="신한카드로 등록하기" />
+                android:textSize="17sp" />
         </LinearLayout>
 
     </RelativeLayout>
