--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/relativeLayout2"
@@ -226,27 +225,31 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:scaleType="fitXY"
-                            android:src="@drawable/detail_img"/>
+                            android:src="@drawable/detail_img" />
+
                         <ImageView
                             android:id="@+id/iv_detailedact_img1"
-                            android:scaleType="fitXY"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:scaleType="fitXY" />
+
                         <ImageView
                             android:id="@+id/iv_detailedact_img2"
-                            android:scaleType="fitXY"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:scaleType="fitXY" />
+
                         <ImageView
                             android:id="@+id/iv_detailedact_img3"
-                            android:scaleType="fitXY"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:scaleType="fitXY" />
+
                         <ImageView
                             android:id="@+id/iv_detailedact_img4"
-                            android:scaleType="fitXY"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:scaleType="fitXY" />
                     </LinearLayout>
 
                 </RelativeLayout>
@@ -258,16 +261,16 @@
 
     <TextView
         android:id="@+id/tttt"
-        android:text="구독하기"
-        android:gravity="center"
-        android:textSize="16sp"
-        android:textColor="#ffffff"
-        android:letterSpacing="-0.02"
-        android:lineSpacingExtra="20sp"
-        android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/round_button_point"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="40dp"
+        android:background="@drawable/round_button_point"
+        android:gravity="center"
+        android:letterSpacing="-0.02"
+        android:lineSpacingExtra="20sp"
+        android:text="구독하기"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
