--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,15 +33,15 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/home_logo"
-                        android:layout_marginEnd="200dp"/>
+                        android:layout_marginEnd="200dp"
+                        android:src="@drawable/home_logo" />
 
                     <ImageView
                         android:id="@+id/iv_homefrag_mypagebtn"
-                        android:padding="4dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="12dp"
+                        android:padding="4dp"
                         android:src="@drawable/ic_person" />
 
                     <ImageView
@@ -109,7 +109,7 @@
         <FrameLayout
             android:id="@+id/fl_homefragment_container"
             android:layout_width="match_parent"
-            android:layout_height="300dp" >
+            android:layout_height="300dp">
 
         </FrameLayout>
     </LinearLayout>
@@ -126,20 +126,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/round_top"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="16sp"
                 android:layout_marginTop="8dp"
-                android:text="요즘 20대 남성에게 가장 인기 많은 구독 서비스"/>
+                android:gravity="center"
+                android:text="요즘 20대 남성에게 가장 인기 많은 구독 서비스"
+                android:textSize="16sp" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_recomand"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -147,7 +148,6 @@
                 android:layout_marginTop="24dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/artboard_11_copy_3_x_100" />
-
 
 
         </LinearLayout>
@@ -162,8 +162,8 @@
         android:layout_height="60dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="80dp"
-        app:backgroundTint="@color/gray1"
         android:src="@drawable/icons_8_chatbot_80"
+        app:backgroundTint="@color/gray1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
