--- a/app/src/main/res/layout/fragment_subscript_manage.xml
+++ b/app/src/main/res/layout/fragment_subscript_manage.xml
@@ -72,8 +72,8 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginHorizontal="30dp"
                     android:background="@color/colorPrimary"
-                    android:paddingTop="4dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingTop="4dp">
 
                     <TextView
                         android:layout_width="wrap_content"
