--- a/app/src/main/res/layout/recycler_anaysis_item.xml
+++ b/app/src/main/res/layout/recycler_anaysis_item.xml
@@ -22,11 +22,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="12dp"
-            android:textSize="16sp"
-            android:textColor="#4f565d"
             android:lineSpacingExtra="9sp"
-            android:textStyle="bold"
             android:text="@{analysisData.category}"
+            android:textColor="#4f565d"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/appCompatSeekBar"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -37,10 +37,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginBottom="12dp"
             android:lineSpacingExtra="9sp"
+            android:progressDrawable="@drawable/custom_seekbar"
             android:text="@{analysisData.money}"
             android:textColor="#4f565d"
             android:textSize="16sp"
-            android:progressDrawable="@drawable/custom_seekbar"
             app:layout_constraintBottom_toTopOf="@+id/appCompatSeekBar"
             app:layout_constraintStart_toEndOf="@+id/tv_analysisitem_category"
             tools:layout_editor_absoluteY="27dp" />
@@ -65,8 +65,8 @@
             android:id="@+id/appCompatSeekBar"
             setProgress="@{analysisData.percent}"
             android:layout_width="match_parent"
-            android:layout_marginBottom="32dp"
             android:layout_height="12dp"
+            android:layout_marginBottom="32dp"
             android:max="100"
             android:progressDrawable="@drawable/custom_seekbar"
             android:thumb="@android:color/transparent"
@@ -78,8 +78,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0.2dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="#c5c4cc"/>
+            android:background="#c5c4cc"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
