--- a/app/src/main/res/layout/recycler_category_item.xml
+++ b/app/src/main/res/layout/recycler_category_item.xml
@@ -2,17 +2,19 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+
         <variable
             name="categoryData"
             type="com.good.solscript.data.ResponseCategorySubData" />
     </data>
+
     <RelativeLayout
         android:id="@+id/rl_rv_matching_item_container"
         android:layout_width="172dp"
         android:layout_height="222dp"
-        android:background="#ffffff"
-        android:layout_marginBottom="20dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginBottom="20dp"
+        android:background="#ffffff"
         android:orientation="vertical">
 
         <View
@@ -39,13 +41,14 @@
                     android:layout_alignParentEnd="true"
                     android:layout_margin="8dp"
                     android:background="@drawable/like_selector" />
+
                 <ImageView
                     android:id="@+id/iv_rv_matching_item_img"
+                    setImage="@{categoryData.image}"
                     android:layout_width="match_parent"
                     android:layout_height="155dp"
                     android:layout_gravity="center_horizontal"
-                    android:scaleType="fitXY"
-                    setImage="@{categoryData.image}"/>
+                    android:scaleType="fitXY" />
 
                 <ImageView
                     android:layout_width="wrap_content"
